--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/advent_pro_bold"
+
         android:layout_marginTop="20dp"
         android:text="Get Your Food Delivered At Your Doorstep"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -33,6 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/advent_pro_bold"
         android:text="Login To Your Account"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -42,9 +46,11 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="325dp"
         android:layout_height="57dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/edittextshape"
         android:drawableLeft="@drawable/mail"
         android:drawablePadding="15dp"
+        android:elevation="5dp"
         android:ems="10"
         android:hint=" Email or Phone Number"
         android:inputType="textEmailAddress"
@@ -58,8 +64,10 @@
         android:layout_width="325dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/edittextshape"
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="15dp"
+        android:elevation="5dp"
         android:ems="10"
         android:hint="Passward"
         android:inputType="textPassword"
@@ -72,6 +80,8 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/advent_pro_bold"
+
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="or"
@@ -84,18 +94,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Continue With"
+        android:fontFamily="@font/advent_pro_bold"
+
         app:layout_constraintEnd_toEndOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button2"
-        android:paddingStart="15dp"
-        android:background="@drawable/whitebutton"
         android:layout_width="152dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/whitebutton"
         android:drawableLeft="@drawable/google"
+        android:elevation="5dp"
+        android:paddingStart="15dp"
         android:text="Google"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -104,12 +117,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button3"
-        android:background="@drawable/whitebutton"
         android:layout_width="152dp"
         android:layout_height="57dp"
-        android:paddingStart="15dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/whitebutton"
         android:drawableLeft="@drawable/facebook"
+        android:elevation="5dp"
+        android:paddingStart="15dp"
         android:text="Facebook"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -127,8 +141,9 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/greenbuttongradient"
         android:layout_marginBottom="80dp"
+        android:background="@drawable/greenbuttongradient"
+        android:elevation="5dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button3"
@@ -139,9 +154,12 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+
+        android:fontFamily="@font/advent_pro_bold"
         android:text="Don't have an account ?"
         app:layout_constraintEnd_toEndOf="@+id/button4"
         app:layout_constraintStart_toStartOf="@+id/button4"
-        tools:layout_editor_absoluteY="671dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
